# civ-like-a

./: .gitignore  Cargo.toml  README.md  imgui.ini  log.txt
.github/workflows/: rust.yml
assets/texture/: spritesheet.aseprite  spritesheet.ron
assets/ui/: barracks_menu.ron  build_menu.ron  lower_panel.ron
config/: bindings.ron  display.ron
draw.io/: A star flowchart.drawio  A*.drawio  Attack.drawio  Basic Game flow.drawio  Building interact Panel.drawio  Camera Raytrace.drawio  Perlin.drawio  Sheet.drawio  Tile Layers.drawio  UnitInteract.drawio  World.drawio
src/: game.rs  main.rs  menu.rs  win.rs
src/components/: builds.rs  mod.rs  pathfinding.rs  player.rs  resbar.rs  stats.rs  tiles.rs  unit.rs
src/systems/: bounce.rs  building.rs  building_interact.rs  camera.rs  imgui.rs  mod.rs  mouse2tile.rs  move_balls.rs  paddle.rs  rescalc.rs  resdisplay.rs  sheet.rs  terraingen.rs  tile_mouse_follow.rs  turn.rs  ui_detector.rs  unit_interact.rs  unit_turn.rs  win_check.rs  winner.rs  world_sheet.rs
