[package]
name = "civ-like-a"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst-imgui = { version = "0.7", features = ["vulkan"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]


[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[profile.release]
opt-level = 3