[package]
name = "civ-like-a"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.3"
amethyst-imgui = { version = "0.7", features = ["vulkan"] }
rand = "0.7.3"
rand_core = "0.5.1"
rand_chacha = "0.2.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]


[profile.dev]
opt-level = 2
debug = true
panic = "unwind"

[profile.release]
opt-level = 3